--- a/cfdi/lib/Makefile.am
+++ b/cfdi/lib/Makefile.am
@@ -6,7 +6,7 @@ libinerecfdi_la_SOURCES = verifica_sello_digital.c lee_certificado.c sello.c \
 			  base64.c
 
 if RI_ENABLED
-  libinerecfdi_la_SOURCES += crea_cfdi_qrcode_alloc.c
+  libinerecfdi_la_SOURCES += crea_cfdi_qrcode_alloc.c r12nimpresa.c
 endif
 
 libinerecfdi_la_LDFLAGS = -version-info 0:1:0
@@ -21,7 +21,8 @@ nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cfdi/verifica_sello_di
 			$(top_srcdir)/include/inere/cfdi/base64.h
 
 if RI_ENABLED
-  nobase_dist_include_HEADERS += $(top_srcdir)/include/inere/cfdi/crea_cfdi_qrcode_alloc.h
+  nobase_dist_include_HEADERS += $(top_srcdir)/include/inere/cfdi/crea_cfdi_qrcode_alloc.h \
+				 $(top_srcdir)/include/inere/cfdi/r12nimpresa.h
 endif
 
 INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
