--- a/cfdi/src/Makefile.am
+++ b/cfdi/src/Makefile.am
@@ -8,12 +8,11 @@ sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
 		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
+
 ri_SOURCES = ri.c
 ri_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) $(LIBQRENCODE_LIBS) \
-		$(LIBHPDF_LIBS) $(LIBPNG_LIBS)
+		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
 
-INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(LIBPNG_INCLUDES) \
-	   $(LIBQRENCODE_INCLUDES) $(LIBHPDF_INCLUDES)
+INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
