--- a/cfdi/src/Makefile.am
+++ b/cfdi/src/Makefile.am
@@ -6,13 +6,14 @@ endif
 
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+		-lz -ldl -lm -lrt
 
 
 ri_SOURCES = ri.c
 ri_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS)
+		-lz -ldl -lm -lrt
 
-INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(XSLT_INCLUDE)
+
+INCLUDES = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
