--- a/cfdi/test/Makefile.am
+++ b/cfdi/test/Makefile.am
@@ -3,25 +3,25 @@ bin_PROGRAMS = sello certificado cadena lee crea
 
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+		-lz -ldl -lm -lrt
 
 certificado_SOURCES = certificado.c
 certificado_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-			$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+		-lz -ldl -lm -lrt
 
 cadena_SOURCES = cadena.c
 cadena_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+		-lz -ldl -lm -lrt
 
 lee_SOURCES = lee.c
 lee_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+		-lz -ldl -lm -lrt
 
 crea_SOURCES = crea.c
 crea_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
-		$(XML2_LIB) $(XSLT_LIB) $(OPENSSL_LIBS) -ldl
+		-lz -ldl -lm -lrt
 
 
-INCLUDES = -I$(top_srcdir)/include $(XML2_INCLUDE) $(CURL_INCLUDES) $(UUID_INCLUDES)
+INCLUDES = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
