--- a/cfdi/test/Makefile.am
+++ b/cfdi/test/Makefile.am
@@ -3,22 +3,27 @@ bin_PROGRAMS = sello certificado cadena lee crea
 
 sello_SOURCES = sello.c
 sello_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
+		$(top_srcdir)/../lib/libinere.la \
 		-lz -ldl -lm -lrt
 
 certificado_SOURCES = certificado.c
 certificado_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
+		$(top_srcdir)/../lib/libinere.la \
 		-lz -ldl -lm -lrt
 
 cadena_SOURCES = cadena.c
 cadena_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
+		$(top_srcdir)/../lib/libinere.la \
 		-lz -ldl -lm -lrt
 
 lee_SOURCES = lee.c
 lee_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
+		$(top_srcdir)/../lib/libinere.la \
 		-lz -ldl -lm -lrt
 
 crea_SOURCES = crea.c
 crea_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
+		$(top_srcdir)/../lib/libinere.la \
 		-lz -ldl -lm -lrt
 
 
