--- a/cfdi/lib/Makefile.am
+++ b/cfdi/lib/Makefile.am
@@ -25,9 +25,9 @@ if RI_ENABLED
 				 $(top_srcdir)/include/inere/cfdi/r12nimpresa.h
 endif
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 if RI_ENABLED
-  INCLUDES += -I$(top_srcdir)/../include
+  AM_CPPFLAGS += -I$(top_srcdir)/../include
 endif
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
