--- a/cfdi/src/Makefile.am
+++ b/cfdi/src/Makefile.am
@@ -17,6 +17,6 @@ ri_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
 
 
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
