--- a/cfdi/test/Makefile.am
+++ b/cfdi/test/Makefile.am
@@ -32,6 +32,6 @@ verifica_firma_LDFLAGS = $(top_srcdir)/lib/libinerecfdi.la \
 		-lz -ldl -lm -lrt
 
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
