--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -16,6 +16,6 @@ nobase_dist_include_HEADERS = $(top_srcdir)/include/inere/cantidadcl_alloc.h \
 		$(top_srcdir)/include/inere/util.h \
 		$(top_srcdir)/include/inere/extrae_fecha.h
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
