--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,6 @@ cantidad_LDFLAGS = $(top_srcdir)/lib/libinere.la
 rfc_SOURCES = rfc.c
 rfc_LDFLAGS = $(top_srcdir)/lib/libinere.la
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 AM_CFLAGS = -Wall -Wextra -Wmissing-prototypes -Wstrict-prototypes -Wold-style-definition -Wuninitialized -Wmissing-declarations -Winit-self -ansi -pedantic -pthread -pedantic-errors -D_GNU_SOURCE -funsigned-char
